--- a/styles/style.css
+++ b/styles/style.css
@@ -54,14 +54,14 @@ body{
 .container>.intro>p:nth-of-type(3)>span.access{
     text-decoration: underline;
 }
-.container>.intro>p:nth-of-type(4){
+/* .container>.intro>p:nth-of-type(4){
     width: 40px;
     height: 40px;
     background-color: #fff;
     text-align: center;
     margin: auto;
     border-radius: 50%;
-}
+} */
 
 @media screen and (max-width: 900px){
     .container{
